--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --font-family: "Roboto", sans-serf;
+    --font-family: 'Playpen Sans', cursive;
     --normal-font: 400;
     --bold-font: 700;
     --bolder-font: 900;
@@ -54,6 +54,8 @@ html {
   }
   nav h1 {
     color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
   }
   
   nav a {
@@ -104,6 +106,10 @@ html {
     border-radius: 6px;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow);
   }
+  /*para la barra*/
+  .habilidades{
+    padding-top: 100px;
+  }
   
   .bio h1 {
     margin-bottom: var(--bottom-margin);
@@ -116,6 +122,7 @@ html {
   .sobremi {
     background-color: var(--bg-color);
     padding: 1rem 6rem;
+    padding-top: 100px;
   }
   
   .sobremi h2 {
@@ -134,11 +141,12 @@ html {
     margin-top: 2.5rem;
   }
   
-  .encabezado-habilidad {
+  .encabezado-habilidades {
     margin-bottom: 1rem;
+    
   }
   
-  .contenedor-habilidad img {
+  .contenedor-habilidad i {
     padding: 1.25rem;
   }
   
@@ -158,16 +166,24 @@ html {
     padding: 20px;
     margin: 10px;
   }
+  .bio-titulo{
+    text-align: center;
+  }
+  .bio{
+    padding: 20px;
+  }
   /*-----------------------*/
   .proyectos {
     background-color: var(--bg-color);
     padding: 32px 0;
     margin-top: 2rem;
+    padding-top: 100px;
   }
   
   .foto-de-proyecto {
-    width: 65%;
+    width: 95%;
     height: 60%;
+    border-radius: 20px;
   }
   
   .contenedor-de-proyectos {
@@ -184,7 +200,8 @@ html {
     text-align: center;
     
     padding: 1rem;
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
   .contenedor-de-proyectos p {
     padding: 0.4rem;
@@ -204,10 +221,22 @@ html {
     box-shadow: 0 3px 10px var(--primary-shadow);
     padding: 20px;
     margin: 10px;
+    height: 30rem;
+  }
+  .tarjeta-de-proyectos img{
+    width: 300px;
+    height: 200px;
+  }
+  
+  .navegacion{
+   
+    border-radius: 20px;
+    margin-top: 4px;
   }
   /*contacto*/
   .contacto {
     margin-top: 2rem;
+    padding-top: 120px;
   }
   
   .contacto h2 {
@@ -219,7 +248,7 @@ html {
     max-width: 40.75rem;
     margin: 0 auto;
     padding: 0.938rem;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 0 3px 10px var(--secondary-shadow);
   }
   .formulario-contacto-contenedor label {
@@ -242,18 +271,25 @@ html {
     border: 2px outset var(--primary-color);
     font-size: 0.875rem;
     outline: none;
+    border: none;
+  outline: none;
+    border-radius: 10px;
+   background-color: #8b8eaf54;
+   padding: 10px;
   }
   .input-field::placeholder {
     padding: 0.5rem;
     color: var(--primary-color);
+    
   }
   .submit-btn {
-    width: 100%;
+    width: 40%;
     padding: 10px;
     margin: 10px 0;
-    background-color: #fff;
+    background-color: var(--primary-color);
+    color: #fff;
     border: 2px solid var(--primary-color);
-    border-radius: 5px;
+    border-radius: 20px;
     font-size: 1rem;
     font-weight: var(--bold-font);
     transition: var(--transition);
@@ -262,13 +298,14 @@ html {
     background-color: var(--primary-color);
     border: 2px solid var(--primary-color);
     cursor: pointer;
+    color: black;
   }
   .sociales {
     display: flex;
     flex-direction: column;
     position: fixed;
     right: 1%;
-    bottom: 50%;
+    bottom: 40%;
   }
   
   .socicon {
@@ -286,6 +323,10 @@ html {
     width: 3rem;
     height: 3rem;
   }
+  .titulo-de-proyectos{
+    text-align: center;
+  }
+  
   /* para cel*/
   @media screen and (max-width: 720px) {
     /* los cambios se reflejan en una pantalla con un ancho de 720px ye inferior */
@@ -321,9 +362,10 @@ html {
     }
   
     .hero img {
-          height: 37.5rem;
+          height: 27.5rem;
           width: 30rem;
           margin-bottom: 90px;
+          margin-top: 30px;
       }
   
     .bio {
@@ -346,20 +388,38 @@ html {
       width: 5.875rem;
       height: 5.25rem;
     }
-    .contenedor-de-proyecto {
+    .contenedor-de-proyectos {
+      display: grid;
+      grid-template-columns:1fr 1fr;
+      justify-content: center;
+      align-items: center;
+
+    }
+    
+    .formulario-contacto-contenedor {
+      max-width: 20.75rem;
+    }
+  }
+  @media screen and (max-width: 520px){
+    .contenedor-de-proyectos {
+      width: 20rem;
+      display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 30px;
     }
-  
-    .contenedor-de-proyecto {
-      width: 20.875rem;
+    .hero img{
+      width: 26rem;
     }
-    .contenedor-formulario-de-contacto {
-      max-width: 23.75rem;
+    .tarjeta-de-proyectos{
+      margin-right: -20px;
     }
+    
   }
   @media screen and (max-width: 420px) {
     .hero img {
-      height: 30rem;
+      height: 20rem;
       width: 20rem;
       margin-bottom: 90px;
     }
@@ -369,14 +429,30 @@ html {
     }
   
     .contenedor-de-proyectos {
-      width: 17.875rem;
+      width: 18rem;
       display: flex;
       flex-direction: column;
+      
+      
     }
   
-    .contenedor-formulario-de-contacto{
+    .formulario-contacto-contenedor{
       max-width: 17.75rem;
     }
+    
+    .tarjeta-de-proyectos{
+      margin-right: 10px;
+    }
+    
   } 
+  .foot{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    color: var(--primary-color);
+  }
+  .foot h3{
+    margin: 20px;
+  }
   
  
